--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
   <meta charset="UTF-8">
   <title>Рулетка NFT</title>
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;
-      font-family: Arial, sans-serif;
+    body {
       background: #6a0dad;
       color: white;
+      font-family: Arial, sans-serif;
       text-align: center;
-      height: 100%;
+      overflow-x: hidden;
+      position: relative;
+      margin: 0;
+      padding: 0;
     }
     #roulette-container {
-      position: relative;
-      width: 100%;
+      width: 320px;
+      margin: 50px auto;
       overflow: hidden;
-      height: 300px;
-      margin-top: 60px;
-      background: #fff;
+      border: 4px solid white;
+      background: transparent;
+      height: 180px;
+      position: relative;
     }
     #roulette {
       display: flex;
@@ -28,21 +29,22 @@
       will-change: transform;
     }
     .item {
-      min-width: 250px;
-      margin: 0 30px;
+      min-width: 120px;
+      margin: 0 10px;
+      text-align: center;
       flex-shrink: 0;
     }
     .item img {
-      width: 220px;
-      height: 220px;
+      width: 100px;
+      height: 100px;
       object-fit: cover;
-      border-radius: 20px;
+      border-radius: 15px;
       background: transparent;
     }
     button {
-      margin-top: 30px;
-      padding: 15px 50px;
-      font-size: 22px;
+      margin-top: 20px;
+      padding: 12px 40px;
+      font-size: 20px;
       background: gold;
       border: none;
       border-radius: 10px;
@@ -54,44 +56,25 @@
       top: 0; left: 0;
       width: 100%;
       height: 100%;
-      backdrop-filter: blur(10px);
-      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(8px);
+      background: rgba(0, 0, 0, 0.4);
       justify-content: center;
       align-items: center;
       flex-direction: column;
       z-index: 10;
-      padding: 20px;
     }
     #overlay img {
-      width: 250px;
-      height: 250px;
+      width: 200px;
+      height: 200px;
       object-fit: cover;
-      border-radius: 25px;
+      border-radius: 20px;
       border: 5px solid gold;
       margin-bottom: 20px;
       background: white;
     }
     #overlay h2 {
-      font-size: 2.5em;
+      font-size: 2em;
       color: gold;
-      margin-bottom: 20px;
-    }
-    #pointer {
-      position: absolute;
-      top: -20px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 0; 
-      height: 0; 
-      border-left: 20px solid transparent;
-      border-right: 20px solid transparent;
-      border-bottom: 30px solid red;
-      z-index: 5;
-    }
-    #cooldown {
-      margin-top: 15px;
-      font-size: 20px;
-      color: lightgray;
     }
   </style>
 </head>
@@ -100,9 +83,96 @@
 <h1>Рулетка NFT 🎁</h1>
 
 <div id="roulette-container">
-  <div id="pointer"></div>
   <div id="roulette">
     <div class="item"><img src="https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg"></div>
     <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
     <div class="item"><img src="https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg"></div>
-    <div class="item"><img src="https://i.getgems.io/NzU_W
+    <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
+    <!-- Дублируем -->
+    <div class="item"><img src="https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg"></div>
+    <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
+  </div>
+</div>
+
+<button onclick="startRoulette()">Крутить!</button>
+
+<div id="overlay">
+  <img id="prize-img" src="" alt="Приз">
+  <h2>Вы выиграли!</h2>
+</div>
+
+<script>
+  let roulette = document.getElementById('roulette');
+  let overlay = document.getElementById('overlay');
+  let prizeImg = document.getElementById('prize-img');
+  let position = 0;
+  let speed = 30; // начальная скорость
+  let spinning = false;
+  let animationFrame;
+
+  function startRoulette() {
+    if (spinning) return;
+    spinning = true;
+    position = 0;
+    speed = 30;
+
+    function spin() {
+      position -= speed;
+      if (position <= -roulette.scrollWidth / 2) {
+        position = 0;
+      }
+      roulette.style.transform = `translateX(${position}px)`;
+      animationFrame = requestAnimationFrame(spin);
+    }
+
+    spin();
+
+    setTimeout(() => {
+      gradualStop();
+    }, 3000);
+  }
+
+  function gradualStop() {
+    cancelAnimationFrame(animationFrame);
+    let deceleration = speed / 100; // делаем маленькое замедление
+    function slowSpin() {
+      position -= speed;
+      if (position <= -roulette.scrollWidth / 2) {
+        position = 0;
+      }
+      roulette.style.transform = `translateX(${position}px)`;
+
+      speed -= deceleration;
+      if (speed > 0.5) {
+        requestAnimationFrame(slowSpin);
+      } else {
+        spinning = false;
+        showPrize();
+      }
+    }
+    slowSpin();
+  }
+
+  function showPrize() {
+    let items = document.querySelectorAll('.item img');
+    let center = window.innerWidth / 2;
+    let minDiff = Infinity;
+    let winnerSrc = '';
+
+    items.forEach(img => {
+      let rect = img.getBoundingClientRect();
+      let imgCenter = rect.left + rect.width / 2;
+      let diff = Math.abs(center - imgCenter);
+      if (diff < minDiff) {
+        minDiff = diff;
+        winnerSrc = img.src;
+      }
+    });
+
+    prizeImg.src = winnerSrc;
+    overlay.style.display = 'flex';
+  }
+</script>
+
+</body>
+</html>
