--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       padding: 0;
     }
     #roulette-container {
-      width: 320px;
+      width: 500px; /* Увеличиваем для ПК */
       margin: 50px auto;
       overflow: hidden;
       border: 4px solid white;
@@ -29,14 +29,14 @@
       will-change: transform;
     }
     .item {
-      min-width: 120px;
+      min-width: 150px; /* Увеличиваем ширину элементов для ПК */
       margin: 0 10px;
       text-align: center;
       flex-shrink: 0;
     }
     .item img {
-      width: 100px;
-      height: 100px;
+      width: 120px; /* Увеличиваем размер изображений */
+      height: 120px;
       object-fit: cover;
       border-radius: 15px;
       background: transparent;
@@ -70,10 +70,14 @@
       border-radius: 20px;
       border: 5px solid gold;
       margin-bottom: 20px;
-      background: white;
+      background: transparent; /* Убираем белый фон */
     }
     #overlay h2 {
       font-size: 2em;
+      color: gold;
+    }
+    #timer {
+      font-size: 1.5em;
       color: gold;
     }
   </style>
@@ -88,33 +92,40 @@
     <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
     <div class="item"><img src="https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg"></div>
     <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
-    <!-- Дублируем -->
     <div class="item"><img src="https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg"></div>
     <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
   </div>
 </div>
 
-<button onclick="startRoulette()">Крутить!</button>
+<button id="spinButton" onclick="startRoulette()">Крутить!</button>
+<p id="timer">Следующий запуск через: 10 секунд</p>
 
 <div id="overlay">
   <img id="prize-img" src="" alt="Приз">
   <h2>Вы выиграли!</h2>
+  <button onclick="closeOverlay()">Закрыть</button>
 </div>
 
 <script>
   let roulette = document.getElementById('roulette');
   let overlay = document.getElementById('overlay');
   let prizeImg = document.getElementById('prize-img');
+  let spinButton = document.getElementById('spinButton');
+  let timerElement = document.getElementById('timer');
   let position = 0;
   let speed = 30; // начальная скорость
   let spinning = false;
   let animationFrame;
+  let timer;
 
   function startRoulette() {
     if (spinning) return;
     spinning = true;
     position = 0;
     speed = 30;
+
+    // Убираем таймер, чтобы он не мешал при запуске
+    clearInterval(timer);
 
     function spin() {
       position -= speed;
@@ -171,6 +182,24 @@
 
     prizeImg.src = winnerSrc;
     overlay.style.display = 'flex';
+
+    // Таймер для обратного отсчета на 10 секунд
+    let secondsLeft = 10;
+    timer = setInterval(function() {
+      timerElement.textContent = `Следующий запуск через: ${secondsLeft} секунд`;
+      secondsLeft--;
+      if (secondsLeft < 0) {
+        clearInterval(timer);
+        timerElement.textContent = `Готово к следующему запуску!`;
+        spinButton.disabled = false;
+      }
+    }, 1000);
+
+    spinButton.disabled = true; // Отключаем кнопку
+  }
+
+  function closeOverlay() {
+    overlay.style.display = 'none';
   }
 </script>
 
