--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       padding: 0;
     }
     #roulette-container {
-      width: 500px; /* Увеличиваем для ПК */
+      width: 700px; /* Увеличиваем для ПК */
       margin: 50px auto;
       overflow: hidden;
-      border: 4px solid white;
+      border: none; /* Убираем белый квадрат */
       background: transparent;
       height: 180px;
       position: relative;
@@ -29,14 +29,14 @@
       will-change: transform;
     }
     .item {
-      min-width: 150px; /* Увеличиваем ширину элементов для ПК */
+      min-width: 200px; /* Увеличиваем ширину элементов для ПК */
       margin: 0 10px;
       text-align: center;
       flex-shrink: 0;
     }
     .item img {
-      width: 120px; /* Увеличиваем размер изображений */
-      height: 120px;
+      width: 150px; /* Увеличиваем размер изображений */
+      height: 150px;
       object-fit: cover;
       border-radius: 15px;
       background: transparent;
@@ -70,7 +70,7 @@
       border-radius: 20px;
       border: 5px solid gold;
       margin-bottom: 20px;
-      background: transparent; /* Убираем белый фон */
+      background: transparent;
     }
     #overlay h2 {
       font-size: 2em;
@@ -79,6 +79,19 @@
     #timer {
       font-size: 1.5em;
       color: gold;
+      display: none; /* Таймер скрыт по умолчанию */
+    }
+    /* Стиль для указки */
+    #pointer {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 20px;
+      height: 20px;
+      background-color: gold;
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 15; /* Указка сверху рулетки */
     }
   </style>
 </head>
@@ -95,6 +108,8 @@
     <div class="item"><img src="https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg"></div>
     <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
   </div>
+  <!-- Указка в центре -->
+  <div id="pointer"></div>
 </div>
 
 <button id="spinButton" onclick="startRoulette()">Крутить!</button>
@@ -112,6 +127,7 @@
   let prizeImg = document.getElementById('prize-img');
   let spinButton = document.getElementById('spinButton');
   let timerElement = document.getElementById('timer');
+  let pointer = document.getElementById('pointer');
   let position = 0;
   let speed = 30; // начальная скорость
   let spinning = false;
@@ -126,6 +142,7 @@
 
     // Убираем таймер, чтобы он не мешал при запуске
     clearInterval(timer);
+    timerElement.style.display = 'none'; // Скрыть таймер сразу после начала игры
 
     function spin() {
       position -= speed;
@@ -185,6 +202,7 @@
 
     // Таймер для обратного отсчета на 10 секунд
     let secondsLeft = 10;
+    timerElement.style.display = 'block'; // Показываем таймер
     timer = setInterval(function() {
       timerElement.textContent = `Следующий запуск через: ${secondsLeft} секунд`;
       secondsLeft--;
