--- a/index.html
+++ b/index.html
@@ -84,14 +84,16 @@
     /* Стиль для указки */
     #pointer {
       position: absolute;
-      top: 50%;
+      top: 0;
       left: 50%;
-      width: 20px;
-      height: 20px;
-      background-color: gold;
-      border-radius: 50%;
-      transform: translate(-50%, -50%);
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-bottom: 20px solid gold;
+      transform: translateX(-50%);
       z-index: 15; /* Указка сверху рулетки */
+      pointer-events: none;
     }
   </style>
 </head>
