--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       overflow: hidden;
       border: none; /* Убираем белый квадрат */
       background: transparent;
-      height: 180px;
+      height: 300px; /* Увеличиваем высоту контейнера рулетки */
       position: relative;
     }
     #roulette {
